--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "keywords": [
     "mathjax",
+    "small",
+    "space",
+    "compressed",
+    "stripped",
     "mini",
     "minimathjax",
     "minified",
